--- a/computer project/stage4.html
+++ b/computer project/stage4.html
@@ -17,7 +17,7 @@
       <main class="content">
         <div id="main-content">
           <p id="maintxt">
-            <b>FOR AN IDEAL EXPERIENCE, PLEASE ENABLE FULLSCREEN ON THE WINDOW (F11/Fn + F11)</b>
+            Congrats on passing the password test!
           </p>
         </div>
       </main>
@@ -33,6 +33,6 @@
 
 </body>
 
-  <script src="index.js"></script>
+  <script src="stage4.js"></script>
 </body>
 </html>
